fixed left arrow icon not showing increased size of icons

--- a/src/components/carousel/Carousel.css
+++ b/src/components/carousel/Carousel.css
@@ -16,14 +16,9 @@
 .slide-hidden {
   display: none !important;
 }
-.slide-desc {
-}
 
 .arrow {
-  position: absolute;
   filter: drop-shadow(0px 0px 5px #555);
-  width: 2rem;
-  height: 2rem;
   color: white;
 }
 
